# PLEGSROS

./: LICENSE  README.md  README_RPi4_OPTIMIZATION.md
src/.claude/: settings.local.json
src/custom_msgs/: CMakeLists.txt  package.xml
src/robot_control_system/: CMakeLists.txt  package.xml
src/robot_control_system/config/: robot_config.yaml  robot_config_rpi4.yaml
src/robot_control_system/launch/: robot_control.launch.py  test_single_joint.launch.py
src/robot_control_system/rviz/: robot_control.rviz
src/robot_control_system/scripts/: monitor_rpi4_performance.sh  optimize_rpi4.sh  setup_can.sh
src/robot_control_system/src/: command_sender_node.cpp  pd_controller_node.cpp  reception_node.cpp  safety_monitor_node.cpp  trajectory_publisher_node.cpp
src/robot_control_system/trajectory/: test_trajectory.csv  walk_cycle.csv
